--- a/templates/about.html
+++ b/templates/about.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<h1>About</h1>
+<h1>Сайт запущено у контейнері за допомогою Docker.</h1><br>
+<p>Барнич ІСТ-31</p>
+
 {% endblock %}
